xrpl-escrow-stdlib/tests/compile_fail/succeed_with_zero.stderr
error[E0080]: evaluation panicked: succeed_with requires a positive code
 --> src/ctx/finish_result.rs
  |
  |         const { assert!(N > 0, "succeed_with requires a positive code") };
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `xrpl_escrow_stdlib::FinishResult::succeed_with::<0>::{constant#0}` failed here

note: erroneous constant encountered
 --> src/ctx/finish_result.rs
  |
  |         const { assert!(N > 0, "succeed_with requires a positive code") };
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn xrpl_escrow_stdlib::FinishResult::succeed_with::<0>`
 --> tests/compile_fail/succeed_with_zero.rs:4:13
  |
4 |     let _ = FinishResult::succeed_with::<0>();
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
